cluster/uk.msrpi.com/monitoring/kube-prometheus-stack/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.uk.msrpi.com`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 80
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
    domains:
      - main: grafana.uk.msrpi.com
